# nuxt-keycloak-jwt-auth

./: .env  .gitignore  Caddyfile  LICENSE  README.md  compose.dev.yaml  init_dev.sh
backend/: .env  Dockerfile  README.md  clean.sh  pyproject.toml
backend/src/litestar_keycloak/: app.py  auth.py  test_keycloak_auth.py  test_rsa.py
frontend/: .env  .npmrc  Dockerfile  app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml
frontend/server/api/: token.get.ts
frontend/server/api/auth/: [...].ts
